# subconvert

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  Makefile  Makefile.am  README  README.md  README.rst  acinclude.m4  autogen.sh  configure.ac  ez_setup.py  install.sh  mkdocs.yml  resources.qrc  setup.cfg  setup.py  subconvert-gui.py  subconvert.desktop  subconvert.py  subconvert_gui.py  subconvert_update.py  tox.ini
ci/: dist_test  travis_install  travis_run
docs/: Makefile  faq.adoc  faq.md  faq.txt  index.adoc  index.md  index.txt  subconvert.1.adoc.in  subconvert.1.txt.in
docs/changelogs/: 1.0.0.adoc  1.0.0.md  1.0.1.adoc  1.0.1.md  1.0.3.adoc  1.0.3.md  1.1.0.adoc  1.1.0.md  2.0.0.adoc  2.0.0.md  2.1.0.adoc  2.1.0.md  next.adoc  next.md
docs/dev-related/: translating.adoc  translating.md  translating.txt
docs/manual/: available-formats.adoc  available-formats.md  available-formats.txt  encodings.md  encodings.txt  gui.md  gui.txt  installation.adoc  installation.md  installation.txt  pfile.adoc  program-options.adoc  program-options.md  program-options.txt  usage.md  usage.txt
icons/: Makefile.am
img/: Makefile.am
po/: Makevars  pl.po
reqs/: requirements-coverage.txt  requirements-tests.txt
src/: messages.pot  subcinfo.py  subconvert.py  subconvert_gui.py  subconvert_update.py
src/core/: FrameTime.py  GenericSubParser.py  SubParsingError.py
src/locale/pl/LC_MESSAGES/: subconvert.po
src/parsers/: MicroDVD.py  SubRip.py  SubViewer.py  TMP.py
src/subconvert/: Makefile.am  apprunner.py
src/subconvert/cli/: Makefile.am  syncparse.py
src/subconvert/gui/: DataModel.py  Detail.py  FileDialogs.py  GuiApp.py  MainWindow.py  Makefile.am  OffsetDialog.py  PropertyFileEditor.py  SubtitleTabs.py  SubtitleWindow.py  ToolBox.py
src/subconvert/gui/tools/: Details.py
src/subconvert/locale/: POTFILES.in
src/subconvert/locale/pl/LC_MESSAGES/: subconvert.po
src/subconvert/parsing/: FrameTime.py  Makefile.am  Offset.py
src/subconvert/utils/: Encodings.py  Locale.py  Makefile.am  PropertyFile.py  SubtitleSearch.py  VideoPlayer.py  version.py
src/subparser/: Convert.py  FrameTime.py  Parsers.py  SubParser.py  __init__.py  version.py
src/test/: clean.sh  makefile  startTest.sh  testStart.sh  test_chardet.py  test_converting.py  test_one_line_parsers.py  test_parsers.py
src/test/subs/: Line.microdvd  Line.mpl2  Line.tmp  SubSample.microdvd  SubSample.subrip  SubSample.subviewer  SubSample.tmp  enc.iso88592
subconvert/: Makefile.am  apprunner.py  messages.pot  resources.qrc  subconvert.py  subconvert_gui.py  subconvertutils.py
subconvert/cli/: MainApp.py  Makefile.am  __init__.py
subconvert/gui/: DataModel.py  Detail.py  FileDialogs.py  FrameTimeSpinBox.py  MainWindow.py  Makefile.am  Panel.py  PropertyFileEditor.py  SubModel.py  SubtitleCommands.py  SubtitleEditorCommands.py  SubtitleTabs.py  SubtitleWindow.py  VideoWidget.py  __init__.py
subconvert/gui/tools/: History.py  Synchronizer.py
subconvert/img/: Makefile.am  readme.txt
subconvert/locale/pl/LC_MESSAGES/: subconvert.po
subconvert/parsing/: Convert.py  Core.py  Formats.py  FrameTime.py  Makefile.am  Offset.py  Parsers.py  SubParser.py  __init__.py
subconvert/subparser/: Convert.py  FrameTime.py  Parsers.py  SubParser.py  __init__.py
subconvert/subutils/: FileUtils.py  SubPath.py  __init__.py  path.py  suboptparse.py  version.py
subconvert/test/: Mocks.py  clean.sh  testStart.sh  test_Alias.py  test_FrameTime.py  test_SubConverter.py  test_SubManager.py  test_SubParser.py  test_Subtitle.py  test_SubtitleManager.py  test_chardet.py  test_converting.py  test_frametime.py  test_one_line_parsers.py
subconvert/test/subs/: Line.mpl2  Line.subrip  Line.subviewer  SubSample.microdvd  SubSample.mpl2  SubSample.subviewer  SubSample.tmp  enc.cp1250  enc.utf8
subconvert/utils/: Alias.py  Encodings.py  Locale.py  Locale.py.in  Makefile.am  PropertyFile.py  SubException.py  SubFile.py  SubPath.py  SubSettings.py  SubtitleData.py  SubtitleSearch.py  Utils.py  VideoPlayer.py  version.py  version.py.in
tests/: test_Alias.py  test_FrameTime.py  test_Offset.py  test_SubManager.py  test_Subtitle.py  test_SubtitleSearch.py  test_formats.py  test_syncparse.py
tests/subs/: microdvd-1.txt  mpl2-1.json  mpl2-1.txt  subrip-1.json  subrip-1.txt  subviewer-1.json  subviewer-1.txt  tmp-1.json  tmp-1.txt
tools/: gen-in  subconvert_version.sh
