# icons/Makefile.am

hicolordir = $(datadir)/icons/hicolor

dist_icon16_DATA = 16x16/subconvert.png
icon16dir = $(hicolordir)/16x16/apps

dist_icon22_DATA = 22x22/subconvert.png
icon22dir = $(hicolordir)/22x22/apps

dist_icon32_DATA = 32x32/subconvert.png
icon32dir = $(hicolordir)/32x32/apps

dist_icon48_DATA = 48x48/subconvert.png
icon48dir = $(hicolordir)/48x48/apps

dist_icon128_DATA = 128x128/subconvert.png
icon128dir = $(hicolordir)/128x128/apps

dist_icon256_DATA = 256x256/subconvert.png
icon256dir = $(hicolordir)/256x256/apps

dist_iconscalable_DATA = scalable/subconvert.svg
iconscalabledir = $(hicolordir)/scalable/apps

dist_iconspixmap_DATA = scalable/subconvert.svg
iconspixmapdir = $(datadir)/pixmaps
