# subconvert/gui/Makefile.am

gui_PYTHON = \
	__init__.py \
	DataModel.py \
	Detail.py \
	FileDialogs.py \
	MainWindow.py \
	Panel.py \
	PropertyFileEditor.py \
	SubtitleCommands.py \
	SubtitleTabs.py \
	SubtitleWindow.py

#CLEANFILES += $(gui_PYTHON)

guidir = $(datadir)/subconvert/subconvert/gui

CLEANFILES = *.pyc *.pyo

clean-local:
	rm -rf __pycache__
