# subconvert/img/Makefile.am

img_DATA = \
	readme.txt \
	nook.png \
	not_clean.png \
	ok.png \
	skipped.png

imgdir = $(datadir)/subconvert/subconvert/img
iconsdir = $(imgdir)/icons

icon32_DATA = icons/32x32/subconvert.png
icon32dir = $(iconsdir)/32x32

icon48_DATA = icons/48x48/subconvert.png
icon48dir = $(iconsdir)/48x48

icon128_DATA = icons/128x128/subconvert.png
icon128dir = $(iconsdir)/128x128

icon256_DATA = icons/256x256/subconvert.png
icon256dir = $(iconsdir)/256x256

iconscalable_DATA = icons/scalable/subconvert.svg
iconscalabledir = $(iconsdir)/scalable
