# subconvert/img/Makefile.am

dist_img_DATA = \
	readme.txt \
	nook.png \
	not_clean.png \
	ok.png \
	skipped.png

imgdir = $(datadir)/subconvert/subconvert/img
iconsdir = $(imgdir)/icons

dist_icon32_DATA = icons/32x32/subconvert.png
icon32dir = $(iconsdir)/32x32

dist_icon48_DATA = icons/48x48/subconvert.png
icon48dir = $(iconsdir)/48x48

dist_icon128_DATA = icons/128x128/subconvert.png
icon128dir = $(iconsdir)/128x128

dist_icon256_DATA = icons/256x256/subconvert.png
icon256dir = $(iconsdir)/256x256

dist_iconscalable_DATA = icons/scalable/subconvert.svg
iconscalabledir = $(iconsdir)/scalable
