# subconvert/utils/Makefile.am

utils_PYTHON = \
	__init__.py \
	Alias.py \
	Encodings.py \
	Locale.py \
	PropertyFile.py \
	SubException.py \
	SubFile.py \
	SubSettings.py \
	SubtitleData.py \
	version.py

#CLEANFILES += $(utils_PYTHON)

utilsdir = $(datadir)/subconvert/subconvert/utils

CLEANFILES = *.pyc *.pyo

clean-local:
	rm -rf __pycache__
