# subconvert/utils/Makefile.am

utils_PYTHON = \
	__init__.py \
	Alias.py \
	Encodings.py \
	Locale.py \
	PropertyFile.py \
	SubException.py \
	SubFile.py \
	SubSettings.py \
	SubtitleData.py \
	SubtitleSearch.py \
	version.py \
	VideoPlayer.py

#CLEANFILES += $(utils_PYTHON)

utilsdir = $(datadir)/subconvert/subconvert/utils

CLEANFILES = *.pyc *.pyo

clean-local:
	rm -rf __pycache__
